applying parrellel team formation and creatind CSVService as a interface